make keyboard shortcuts work in the native filepicker on Mac OS X. b=372571 r=smichaud sr=vlad